force-app/main/default/objects/Support_Request__c/Support_Request__c.object-meta.xml
<CustomObject>
    <label>Support Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>