force-app/main/default/objects/Support_Request__c/fields/CoAspire_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>CoAspire_Team_Notes__c</fullName>
    <label>CoAspire Team Notes</label>
    <type>TextArea</type>
</CustomField>