force-app/main/default/objects/Support_Request__c/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <label>Subject Line</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>