force-app/main/default/objects/Support_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Something&apos;s not working</fullName>
            </value>
            <value>
                <fullName>A new feature idea</fullName>
            </value>
            <value>
                <fullName>Everything else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>