force-app/main/default/objects/Support_Request__c/fields/Type_CoAspire_Team__c.field-meta.xml
<CustomField>
    <fullName>Type_CoAspire_Team__c</fullName>
    <label>Type (CoAspire Team)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creating/Onboarding/Giving Access to User(s)</fullName>
            </value>
            <value>
                <fullName>Training Users/Writing Knowledge Article</fullName>
            </value>
            <value>
                <fullName>Simple Customisations (e.g. Fields, Updating Profiles, Reports, Dashboards)</fullName>
            </value>
            <value>
                <fullName>More Complex Customisations (e.g. Automations, Lightning App Pages)</fullName>
            </value>
            <value>
                <fullName>Technical Support from a Development Team to Fix a Bug</fullName>
            </value>
            <value>
                <fullName>Feature Request for Development Team</fullName>
            </value>
            <value>
                <fullName>All Other Enquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>